--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figma-textgen-backend",
+  "name": "figma-textgen-configurable",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -7,9 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
     "node-fetch": "^3.3.2"
   }
 }
