--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "figma-textgen-configurable",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "figma-textgen-backend",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   }
 }
