--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "figma-textgen-backend",
-  "type": "module",
+  "name": "figma-textgen-configurable",
+  "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "node-fetch": "^3.3.2"
   }
 }
